--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,3 +17,6 @@
     </div>
   </div>
 </footer>
+
+<script src="/path/to/svg4everybody.js"></script>
+<script>svg4everybody(); // run it now or whenever you are ready</script>
