--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,49 +3,34 @@ layout: default
 ---
 <article class="postWrapper">
   <section class="section--first is-darkBackgrounded u-table">
+
     <div class="section-backgroundImage">
-
-      {% if page.image.feature %}
-        <img class="post-featuredImage" src="{{ page.image.feature  }}" style="
-        {% if page.image.topPosition %}
-          top:{{ page.image.topPosition }};
-        {% endif %}
-        " alt="">
-      {% endif %}
-
+        <img class="post-featuredImage" src="{{ "/assets/images/posts/" }}{{page.image.feature }}">
     </div>
-    <div class="section-gradient
-    {% if page.bgGradientOpacity == "darker" %}
-      section-gradient--darker
-    {% elsif page.bgGradientOpacity == "lighter" %}
-      section-gradient--lighter
-    {% endif %}
-    "></div>
+
+
+
     <div class="section-title is-darkBackgrounded u-tableCell u-verticalAlignMiddle">
       <div class="container">
         <h2>{{ page.title }}</h2>
         <div class="postMeta-wrapper">
           <ul class="postMeta">
-            <li class="postMeta-datetime">
-              <time datetime="{{ page.date }}">
-                {{ page.date | date_to_string }}
-              </time>
-            </li>
             <li class="postMeta-author">
-              By {{ site.author.name }}
-            </li>
-            <li class="postMeta-tags">
-              {{ page.categories }}
+              by {{ site.author.name }}
             </li>
           </ul>
         </div>
       </div>
     </div>
+
+<div class="section-gradient section-gradient--darker"></div>
+
   </section>
   <section class="section--last">
     <div class="container container--content">
       <div class="content-body">
 
+          <img class="post_image" src="{{ "/assets/images/posts/" }}{{page.image.feature }}">
         {{ content }}
 
       </div>
