--- a/_includes/sidebar-nav.html
+++ b/_includes/sidebar-nav.html
@@ -8,7 +8,7 @@
       <li>
         {% if post.image.feature %}
           <a href="{{ post.url }}" class="sidebar-recentPosts-image-wrapper">
-            <img src="{{ post.image.feature  }}" style="" alt="">
+            <img src="{{ post.feature  }}" style="" alt="">
           </a>
         {% endif %}
         <a href="{{ post.url }}">{{ post.title }}</a>
