--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,7 @@ layout: default
   <section class="section--first is-darkBackgrounded u-table">
 
     <div class="section-backgroundImage">
-        <img class="post-featuredImage" src="{{ "/assets/images/posts/" }}{{page.image.feature }}">
+        <img class="post-featuredImage" src="{{ "/assets/images/posts/" }}{{page.feature }}">
     </div>
 
 
@@ -30,7 +30,7 @@ layout: default
     <div class="container container--content">
       <div class="content-body">
 
-          <img class="post_image" src="{{ "/assets/images/posts/" }}{{page.image.feature }}">
+          <img class="post_image" src="{{ "/assets/images/posts/" }}{{page.feature }}">
         {{ content }}
 
       </div>
