--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -1,11 +1,7 @@
 <nav class="menuWrapper">
   <ul class="popover popover--menu">
     <li class="menu-avatar">
-      <a href="/" class="brandLogo brandLogo--small
-      {% if page.bgContrast == "light" %}
-        brandLogo--black
-      {% endif %}
-      ">{{ site.name }}</a>
+      <a href="/" class="brandLogo brandLogo--small">{{ site.name }}</a>
       <ul class="list list--avatarMenu hidden">
         <li class="list-item"><a href="">Twitter</a></li>
         <li class="list-item"><a href="">LinkedIn</a></li>
