--- a/_includes/footer-scripts.html
+++ b/_includes/footer-scripts.html
@@ -49,3 +49,4 @@
     $('.modal-toggle-group').toggleClass('active', $(document).scrollTop() >= 300);
   });
 </script>
+<script type="text/javascript" src="{{ site.baseurl }}assets/javascripts/images_loaded.js"></script>
