--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
     <div class="c3"></div>
     <div class="c4"></div>
   </div>
-  <span>Thomas Fors</span>
+  <span>THOMAS FORS</span>
 </div>
     {% if page.url != '/' %}
       <input type="checkbox" class="sidebar-checkbox" id="sidebar-checkbox">
