--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -162,6 +162,7 @@ body {
     color: #222;
     font-size: 12px;
     text-align: center;
+    font-family: 'Poiret One', cursive;
 }
 
 .post_image {
@@ -456,7 +457,7 @@ h1, h2, h3, h4, h5, h6 {
     letter-spacing: -0.02em;
 }
 
-h1 {
+h1,  {
     font-size: 1rem;
     line-height: 4.5rem;
     margin-top: 3rem;
@@ -636,12 +637,13 @@ html, body {
 
 .brandLogo {
     background-image: url(../images/logo-white.svg);
-    background-size: contain;
+    background-size: 40px;
     background-repeat: no-repeat;
     background-position: 0 0;
-    padding: 0;
+    padding: 10px;
     text-indent: -100em;
     overflow: hidden;
+    opacity: 0.7;
 }
 
 .brandLogo--small {
@@ -1534,7 +1536,7 @@ font-size: 2em;
     white-space: nowrap;
     cursor: pointer;
     border-radius: 99px;
-    background-color: #fff;
+    background-color: transparent;
 }
 
 .sidebar-toggle-wrapper:hover .sidebar-toggle {
@@ -1707,11 +1709,11 @@ font-size: 2em;
 }
 
 .menuWrapper ul li {
-    position: relative;
+    position: fixed;
     float: left;
     list-style: none;
     margin: 0;
-    padding: 0;
+    padding:  0;
 }
 
 .menuWrapper ul a {
