--- a/_includes/footer-scripts.html
+++ b/_includes/footer-scripts.html
@@ -50,3 +50,4 @@
   });
 </script>
 <script type="text/javascript" src="{{ site.baseurl }}assets/javascripts/images_loaded.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}assets/javascripts/layout.js"></script>
