--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,9 @@
 <footer class="section--footer">
   <div class="container container--content">
-
-
+<div class="container">
+      <p>
+        H E L L O<br><a href="{{ site.baseurl }}about/"></a>{{site.description}}. If you have any inquiries please <a href="mailto:me@thomasfors.se">email me!</a>
+      </p>
+  </div>
   </div>
 </footer>
