--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -559,7 +559,6 @@ hr {
 }
 
 .container--content {
-    max-width: 700px;
 }
 
 .is-darkBackgrounded, .is-darkBackgrounded a, .is-darkBackgrounded a:hover, .is-darkBackgrounded a:visited {
@@ -683,7 +682,7 @@ a.textLogo--sidebar {
 }
 
 .textLogo--frontpage {
-    padding-top: 20px;
+    padding-top: 80px;
     font-family: 'Poiret One', cursive;
     //-webkit-text-stroke-width: .05px;
 //-webkit-text-stroke-color: white;
@@ -713,8 +712,8 @@ font-size: 2em;
 .container {
     margin-right: auto;
     margin-left: auto;
-    padding-left: 15px;
-    padding-right: 15px;
+    padding-left: 0;
+    padding-right: 0;
 }
 
 .container:before, .container:after {
@@ -728,19 +727,19 @@ font-size: 2em;
 
 @media (min-width: 768px) {
     .container {
-        width: 750px;
+        width: 100%;
     }
 }
 
 @media (min-width: 992px) {
     .container {
-        width: 970px;
+        width: 100%;
     }
 }
 
 @media (min-width: 1200px) {
     .container {
-        width: 1170px;
+        width: 100%;
     }
 }
 
@@ -2200,11 +2199,13 @@ font-size: 2em;
 }
 
 .section--subscribe {
-    width: 100%;
+    width: 80%;
     background: #fff;
     padding: 1.5rem 0 0;
     position: relative;
     z-index: 400;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .section--subscribe h3 {
@@ -2218,7 +2219,7 @@ font-size: 2em;
 .section--footer {
     width: 100%;
     background: #fff;
-    padding: 1.5rem 0 3rem;
+    padding: 1.5rem 15px 3rem;
     position: relative;
     z-index: 400;
     font-family: "Roboto", sans-serif;
@@ -2297,7 +2298,7 @@ font-size: 2em;
 .section--last {
     position: relative;
     clear: both;
-    padding: 1.5rem 0 6rem;
+    padding: 0;
     background: #fff;
 }
 
@@ -2353,7 +2354,7 @@ font-size: 2em;
     -webkit-transform: translateX(-50%);
     -ms-transform: translateX(-50%);
     transform: translateX(-50%);
-    width: 80%;
+    width: 100%;
     height: 100%;
     color: #fff;
     text-align: center;
