--- a/_includes/head.html
+++ b/_includes/head.html
@@ -76,7 +76,7 @@
 
   <!-- CSS -->
   <link rel="stylesheet" href="{{ site.baseurl }}assets/css/main.css">
-
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   {% if page.syntaxHighlighter %}
     <link rel="stylesheet" href="{{ site.baseurl }}assets/css/prism-okaidia.css">
     <link rel="stylesheet" href="{{ site.baseurl }}assets/css/prism-line-numbers.css">
