--- a/_includes/footer_alt.html
+++ b/_includes/footer_alt.html
@@ -1,10 +1,7 @@
 <footer class="section--footer">
   <div class="container container--content">
 <div class="container">
-      <h6>
-        inquiries?
-    </h6>
-      <p>please <a href="mailto:me@thomasfors.se">email me</a></p>
-  </div>
-  </div>
+<a href="mailto:me@thomasfors.se">email me</a>
+ </div>
+ </div>
 </footer>
