--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -382,13 +382,26 @@ html {
     -moz-font-feature-settings: "kern=1";
 }
 
-
+#previous{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 50%;
+    height: 100%;
+}
+#next{
+    position: absolute;
+    top: 0;
+    right:  0;
+    width: 50%;
+    height: 100%;
+}
 /* Copy & Lists */
 
 p {
     line-height: 1.5rem;
     letter-spacing: .01rem;
-    margin-top: 1.5rem;
+    margin-top: 0;
     margin-bottom: 0;
 }
 
@@ -463,7 +476,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 h6{
     margin: 0;
-    margin-bottom: -40px;
+
     padding: 0;
 }
 
@@ -652,7 +665,6 @@ html, body {
     padding: 10px;
     text-indent: -100em;
     overflow: hidden;
-    opacity: 0.7;
 }
 
 .brandLogo--small {
@@ -1571,7 +1583,7 @@ a.textLogo--sidebar {
     display: block;
     width: 20px;
     height: 2px;
-    background: #222;
+    background: #fff;
     /* background-color: transparent;
   border-radius: 4px; */
     -webkit-transition: background 0.3s;
@@ -1732,7 +1744,6 @@ a.textLogo--sidebar {
     float: left;
     list-style: none;
     margin: 0;
-    opacity: 0.5;
     padding:  0;
 }
 
@@ -2120,7 +2131,17 @@ a.textLogo--sidebar {
     font-size: 0.75rem;
     line-height: 1.5;
 }
+#slideshow {
+    position: relative;
+    overflow: hidden;
+    margin-left: auto;
+    margin-right: auto;
+    background: black;
+}
 
+#slideshow img {
+    position: absolute;
+}
 .blockGroup-list .postArticle-wrapper {
     position: relative;
     background: #fff;
