--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -721,10 +721,6 @@ a.textLogo--sidebar {
         opacity: .9;
 
     }
-    .textLogo--frontpage {
-        font-size: 12px;
-        letter-spacing: 15px;
-    }
     .container {}
 }
 
@@ -2065,13 +2061,13 @@ a.textLogo--sidebar {
 
 
 .blockGroup-list li.block .postArticle-title {
-    margin-top: -23px;
+    margin-top: -29px;
     z-index: 9999;
     position: relative;
     background: rgba(0, 0, 0, 0.8);
     width: 100%;
     color: white;
-    line-height: 23px;
+    line-height: 29px;
     text-transform: uppercase;
 }
 
@@ -2080,10 +2076,24 @@ a.textLogo--sidebar {
     font-size: 16px;
 text-align: center;
 }
+
 .blockGroup-list .block {
     width: 25%;
     opacity: 0.7;
+    font-size: 13px;
 }
+@media(max-width:414px){
+    .blockGroup-list .block {
+        width: 50%;
+        opacity: 0.7;
+        font-size: 10px;
+    }
+    .textLogo--frontpage{
+    letter-spacing: 17px;
+font-size: 10px;
+}
+}
+
 .blockGroup-list .block:hover {
     width: 25%;
     opacity: 1;
