--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2079,19 +2079,23 @@ text-align: center;
 
 .blockGroup-list .block {
     width: 25%;
-    opacity: 0.7;
+    opacity: 0.6;
     font-size: 13px;
+}
+.blockGroup-list .block:hover {
+    -webkit-transition:  1s; /* Safari */
+   transition: 1s;
+    opacity: 1;
 }
 @media(max-width:414px){
     .blockGroup-list .block {
         width: 50%;
-        opacity: 0.7;
         font-size: 10px;
     }
     .textLogo--frontpage{
-    letter-spacing: 17px;
-font-size: 10px;
-}
+        letter-spacing: 17px;
+        font-size: 10px;
+    }
 }
 
 .blockGroup-list .block:hover {
