--- a/_includes/footer-scripts.html
+++ b/_includes/footer-scripts.html
@@ -52,3 +52,4 @@
 <script type="text/javascript" src="{{ site.baseurl }}assets/javascripts/images_loaded.js"></script>
 
 <script type="text/javascript" src="{{ site.baseurl }}assets/javascripts/layout.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}assets/javascripts/title.js"></script>
