--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -1,4 +1,4 @@
-<nav class="menuWrapper">
+<!-- <nav class="menuWrapper">
   <ul class="popover popover--menu">
     <li class="menu-avatar">
       <a href="/" class="brandLogo brandLogo--small">{{ site.name }}</a>
@@ -11,4 +11,4 @@
       </ul>
     </li>
   </ul>
-</nav>
+</nav> -->
