--- a/_includes/sidebar-nav.html
+++ b/_includes/sidebar-nav.html
@@ -1,5 +1,5 @@
 <nav role="navigation" class="sidebar sidebar--right">
-  <a href="{{site.baseurl}}" class="textLogo textLogo--white textLogo--sidebar">{{ site.name }}</a>
+  <a href="/" class="textLogo textLogo--white textLogo--sidebar">{{ site.name }}</a>
   <ul class="sidebar-recentPosts">
     {% for post in site.posts offset:0 limit:10 %}
       {% if post.title == page.title %}
@@ -12,7 +12,7 @@
           </a>
         {% endif %}
         <a href="{{ post.url }}">{{ post.title }}</a>
-        <div class="postMeta">{{ post.date | date_to_string }}</div>
+
       </li>
       {% endif %}
     {% endfor %}
