--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -660,7 +660,7 @@ html, body {
 
 .brandLogo {
     background-image: url(../images/logo-white.svg);
-    background-size: 40px;
+    background-size: 22px;
     background-repeat: no-repeat;
     background-position: 0 0;
     padding: 10px;
@@ -690,17 +690,19 @@ html, body {
 }
 .textLogo--sidebar {
     color: #eee;
-    letter-spacing: 5px;
+    letter-spacing: 14px;
 }
-
+.dud {
+  color: rgba(0,200,255,1);
+  opacity: 0.5;
+}
 a.textLogo--sidebar {
     color: rgba(255, 255, 255, 0.8);
     text-decoration: none;
-    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(75%, transparent), color-stop(75%, rgba(255, 255, 255, 0.8)));
-    background-image: linear-gradient(to bottom, transparent 75%, rgba(255, 255, 255, 0.8) 75%);
     background-repeat: repeat-x;
     background-position: 0 22px;
     background-size: 2px 2px;
+    font-size: 10px;
 }
 
 .textLogo--sidebar:hover {
@@ -709,6 +711,7 @@ a.textLogo--sidebar {
 }
 
 .textLogo--frontpage {
+    width:100%;
     margin:0;
     font-family: 'Poiret One', cursive;
     //-webkit-text-stroke-width: .05px;
@@ -1496,22 +1499,21 @@ a.textLogo--sidebar {
 
 .sidebar {
     width: 14rem;
-    visibility: hidden;
-    padding: 30px 20px;
-    font-family: "Roboto", sans-serif;
-    font-size: 1rem;
-    background-color: #222222;
-    z-index: 900;
-    overflow-x: hidden;
-    overflow-y: scroll;
-    -webkit-transition: all 0.3s ease-in-out;
-    transition: all 0.3s ease-in-out;
-    -moz-user-select: -moz-none;
-    -webkit-user-select: none;
-    -ms-user-select: none;
-    -o-user-select: none;
-    user-select: none;
-    -webkit-overflow-scrolling: touch !important;
+        visibility: hidden;
+        padding: 30px 20px;
+        font-size: 1rem;
+        background-color: #000;
+        z-index: 900;
+        overflow-x: hidden;
+        overflow-y: scroll;
+        -webkit-transition: all 0.3s ease-in-out;
+        transition: all 0.3s ease-in-out;
+        -moz-user-select: -moz-none;
+        -webkit-user-select: none;
+        -ms-user-select: none;
+        -o-user-select: none;
+        user-select: none;
+        -webkit-overflow-scrolling: touch !important;
 }
 
 .sidebar::-webkit-scrollbar {
@@ -1633,7 +1635,6 @@ a.textLogo--sidebar {
 
 .sidebar-toggle:active, #sidebar-checkbox:checked~.sidebar-toggle-wrapper {
     position: fixed;
-    background-color: rgba(34, 34, 34, 0.8);
 }
 
 #sidebar-checkbox:checked~.sidebar-toggle-wrapper .sidebar-toggle {
@@ -1733,7 +1734,7 @@ a.textLogo--sidebar {
     position: relative;
     float: left;
     margin: 0;
-    padding: 0;
+    padding: 10px;
 }
 
 .menuWrapper ul li {
@@ -2000,7 +2001,7 @@ a.textLogo--sidebar {
 
 .postWrapper {
     position: relative;
-    width: 60%;
+    width: 40%;
     z-index: 400;
     -webkit-transition: padding 100ms cubic-bezier(0.565, 1, 0.765, 0.88);
     -webkit-transition: padding 100ms cubic-bezier(0.565, 1.65, 0.765, 0.88);
@@ -2012,7 +2013,16 @@ a.textLogo--sidebar {
 @media (max-width: 767px) {
     .postWrapper {
         overflow-y: hidden;
+        width: 60%;
     }
+
+}
+@media (max-width: 414px) {
+    .postWrapper {
+        overflow-y: hidden;
+        width: 90%;
+    }
+
 }
 
 .meta {
