--- a/_includes/sidebar-nav.html
+++ b/_includes/sidebar-nav.html
@@ -1,4 +1,4 @@
-<nav role="navigation" class="sidebar sidebar--right">
+<nav role="navigation" id=sidebar class="sidebar sidebar--right">
   <a href="/" class="textLogo textLogo--white textLogo--sidebar">{{ site.name }}</a>
   <ul class="sidebar-recentPosts">
     {% for post in site.posts offset:0 limit:10 %}
