--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -36,10 +36,31 @@ body {
 }
 
 .fa{
-    float: right;
-    margin: 20px;
-    font-size: 12px !important;
-    color:white;
+    color: rgba(255,255,255,0.3);
+    width: 100%;
+    cursor: pointer;
+    font: 34px FontAwesome !important;
+    padding: 0 20%;
+}
+.fa-chevron-left{
+        text-align: left;
+}
+.fa-chevron-right{
+        text-align: right;
+}
+.fa:hover{
+    transition: .5s;
+
+    color:rgba(255,255,255,1);
+}
+
+@media(max-width:414px){
+    .fa{
+        color:rgba(255,255,255,1);
+        font-size: 14px !important;
+        padding: 15px;
+    }
+
 }
 
 .loading>div {
@@ -392,6 +413,7 @@ html {
     position: absolute;
     top: 0;
     left: 0;
+    z-index: 500;
     width: 50%;
     height: 100%;
 }
@@ -399,6 +421,7 @@ html {
     position: absolute;
     top: 0;
     right:  0;
+    z-index: 500;
     width: 50%;
     height: 100%;
 }
@@ -721,15 +744,7 @@ a.textLogo--sidebar {
     font-size: 12px;
 }
 
-@media (max-width: 992px) {
-    .fa{
-        font-size: 12px !important;
-        margin: 10px 12px;
-        opacity: .9;
 
-    }
-    .container {}
-}
 
 * {
     -webkit-box-sizing: border-box;
@@ -1556,7 +1571,7 @@ a.textLogo--sidebar {
 
 .sidebar-toggle-wrapper {
     position: fixed;
-    z-index: 500;
+    z-index: 99999;
     top: 30px;
     right: 3%;
     width: 44px;
@@ -1631,6 +1646,10 @@ a.textLogo--sidebar {
     -webkit-transform: translateX(-14rem);
     -ms-transform: translateX(-14rem);
     transform: translateX(-14rem);
+}
+
+.sidebar{
+    z-index: 999999;
 }
 
 .sidebar-toggle:active, #sidebar-checkbox:checked~.sidebar-toggle-wrapper {
@@ -2003,7 +2022,7 @@ a.textLogo--sidebar {
 
 .postWrapper {
     position: relative;
-    width: 40%;
+    width: 50%;
     z-index: 400;
     -webkit-transition: padding 100ms cubic-bezier(0.565, 1, 0.765, 0.88);
     -webkit-transition: padding 100ms cubic-bezier(0.565, 1.65, 0.765, 0.88);
