--- a/_includes/sidebar-nav.html
+++ b/_includes/sidebar-nav.html
@@ -17,4 +17,6 @@
       {% endif %}
     {% endfor %}
   </ul>
+  <div id="email"><a href="mailto:me@thomasfors.se">me@thomasfors.se</a></div>
+
 </nav>
